# KiraOS

./: .gitignore  CMakeLists.txt  Makefile  NAMING_CONVENTIONS.md  README.md  build.sh  create_disk.sh  i686-elf-toolchain.cmake
include/: kernel.h
include/arch/x86/: gdt.hpp  idt.hpp  tss.hpp
include/core/: exception_tester.hpp  io.hpp  process.hpp  sync.hpp  syscalls.hpp  test_processes.hpp  types.hpp  usermode.hpp  utils.hpp
include/debug/: README.md  serial_debugger.hpp
include/display/: console.hpp  vga.hpp  vga_display.hpp
include/drivers/: ata.hpp  keyboard.hpp  timer.hpp
include/formats/: elf.hpp
include/fs/: block_device.hpp  fat32.hpp  ramfs.hpp  vfs.hpp
include/interrupts/: exceptions.hpp  irq.hpp  pic.hpp
include/loaders/: elf_loader.hpp
include/memory/: memory.hpp  memory_manager.hpp  virtual_memory.hpp
include/system/: exceptions.hpp  idt.hpp  io.hpp  irq.hpp  memory.hpp  memory_manager.hpp  pic.hpp  utils.hpp
include/test/: ata_driver_test.hpp  block_device_test.hpp  exception_tester.hpp  fat32_test.hpp  k_printf_test.hpp  process_test.hpp  sync_test.hpp  test_base.hpp  vfs_test.hpp
include/usermode/: user_programs.hpp
kernel/: linker.ld
kernel/arch/: exception_stubs.s
kernel/arch/x86/: exception_stubs.s  gdt.cpp  idt.cpp  syscall_stub.s  tss.cpp  usermode_switch.s
kernel/boot/: boot.asm  stage1.asm  stage2.asm
kernel/boot/elf/: multiboot_entry.s
kernel/boot/img/: stage1.asm
kernel/core/: exceptions.cpp  idt.cpp  irq.cpp  k_printf.cpp  kernel.cpp  kernel_entry.cpp  memory_manager.cpp  memory_operators.cpp  operators.cpp  pic.cpp  process.cpp  runtime_support.cpp  sync.cpp  syscalls.cpp  test_kernel.asm  test_processes.cpp  usermode.cpp
kernel/core/boot/: kernel_entry.cpp  kernel_entry_old.cpp  multiboot_entry.s
kernel/debug/: serial_debugger.cpp
kernel/display/: console copy 2.cpp  console copy.cpp  console.cpp
kernel/drivers/: ata.cpp  keyboard.cpp  timer.cpp
kernel/formats/: elf.cpp
kernel/fs/: block_device.cpp  fat32.cpp  ramfs.cpp  vfs.cpp
kernel/interrupts/: exceptions.cpp  irq.cpp  pic.cpp
kernel/loaders/: elf_loader.cpp
kernel/memory/: memory_manager.cpp  virtual_memory.cpp
kernel/test/: ata_driver_test.cpp  block_device_test.cpp  create_test_disk.sh  exception_tester.cpp  fat32_test copy.cpp  fat32_test.cpp  k_printf_test.cpp  process_test.cpp  sync_test.cpp  test_ata_driver.sh  test_base.cpp  vfs_test.cpp
kernel/usermode/: user_programs.cpp
tools/: README.md
tools/disk/: DISK_TOOLS_README.md  add_test_files.sh  add_test_files_linux.sh  add_test_files_universal.sh  create_fat32_disk.ps1  create_fat32_disk.sh  create_fat32_disk_linux.sh  create_fat32_disk_universal.sh
userspace/: user.ld
userspace/include/: user_programs.hpp
userspace/lib/: libkira.cpp  libkira.hpp  user_utils.cpp  user_utils.hpp
userspace/programs/: cat.cpp  cat_user.cpp  cow_stress.cpp  forktest.cpp  hello_world.c  hello_world_elf.h  ls.cpp  ls_user.cpp  mkdir.cpp  mkdir_user.cpp  rmdir.cpp  rmdir_user.cpp  shell.cpp  test_simple.cpp  test_syscall.cpp  wait_orphan.cpp  waitidtest.cpp
userspace/startup/: crt0.s
userspace/tests/: argvtest.cpp  dup2test.cpp  exitcode.cpp  fdclo.cpp  fdexec.cpp  fdtest.cpp  forktest.cpp  heap_cow.cpp  heaptest.cpp  test_simple.cpp  waittest.cpp
